Add remaining register tests.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(register INTERFACE)
 target_include_directories(register INTERFACE .)
 
-add_library(cpu INTERFACE)
-target_include_directories(register INTERFACE .)
-target_link_libraries(cpu INTERFACE register)
+add_library(cpu cpu.cc)
+target_include_directories(cpu PUBLIC .)
+target_link_libraries(cpu LINK_PRIVATE register)
 
 add_executable(gbc main.cc)
 target_link_libraries(gbc LINK_PRIVATE cpu)
