Add some stubs for ppu/display

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,20 +1,31 @@
 add_library(register INTERFACE)
 target_include_directories(register INTERFACE .)
 
+add_library(display INTERFACE)
+target_include_directories(display INTERFACE .)
+
 add_library(log log.cc)
 target_include_directories(log PUBLIC .)
-
-add_library(cpu cpu.cc opcode.cc)
-target_include_directories(cpu PUBLIC .)
-target_link_libraries(cpu LINK_PRIVATE register mmu log)
 
 add_library(mmu mmu.cc)
 target_include_directories(mmu PUBLIC .)
 target_link_libraries(mmu LINK_PRIVATE cpu log)
 
+add_library(sdl_display sdl_display.cc)
+target_include_directories(sdl_display PUBLIC .)
+target_link_libraries(sdl_display LINK_PRIVATE display log)
+
+add_library(ppu ppu.cc)
+target_include_directories(ppu PUBLIC .)
+target_link_libraries(ppu LINK_PRIVATE display log)
+
+add_library(cpu cpu.cc opcode.cc)
+target_include_directories(cpu PUBLIC .)
+target_link_libraries(cpu LINK_PRIVATE log mmu ppu register)
+
 add_library(gbccore gbc.cc)
 target_include_directories(gbccore PUBLIC .)
-target_link_libraries(gbccore LINK_PRIVATE cpu mmu log)
+target_link_libraries(gbccore LINK_PRIVATE cpu log mmu ppu)
 
 add_executable(gbc main.cc)
 target_link_libraries(gbc LINK_PRIVATE gbccore)
