--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,12 +21,12 @@ target_link_libraries(ppu LINK_PRIVATE display log)
 
 add_library(cpu cpu.cc opcode.cc)
 target_include_directories(cpu PUBLIC .)
-target_link_libraries(cpu LINK_PRIVATE log mmu ppu register)
+target_link_libraries(cpu LINK_PRIVATE display log mmu ppu register)
 
 add_library(gbccore gbc.cc)
 target_include_directories(gbccore PUBLIC .)
-target_link_libraries(gbccore LINK_PRIVATE cpu log mmu ppu)
+target_link_libraries(gbccore LINK_PRIVATE display cpu log mmu ppu)
 
 add_executable(gbc main.cc)
-target_link_libraries(gbc LINK_PRIVATE gbccore)
+target_link_libraries(gbc LINK_PRIVATE gbccore sdl_display)
 install(TARGETS gbc DESTINATION bin)
