--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,10 @@ add_library(mmu mmu.cc)
 target_include_directories(mmu PUBLIC .)
 target_link_libraries(mmu LINK_PRIVATE cpu log)
 
+add_library(timer timer.cc)
+target_include_directories(timer PUBLIC .)
+target_link_libraries(timer LINK_PRIVATE register log)
+
 add_library(sdl_display sdl_display.cc)
 target_include_directories(sdl_display PUBLIC .)
 target_link_libraries(sdl_display LINK_PRIVATE display log)
@@ -21,11 +25,11 @@ target_link_libraries(ppu LINK_PRIVATE display log)
 
 add_library(cpu cpu.cc opcode.cc)
 target_include_directories(cpu PUBLIC .)
-target_link_libraries(cpu LINK_PRIVATE display log mmu ppu register)
+target_link_libraries(cpu LINK_PRIVATE display log mmu ppu timer register)
 
 add_library(gbccore gbc.cc)
 target_include_directories(gbccore PUBLIC .)
-target_link_libraries(gbccore LINK_PRIVATE display cpu log mmu ppu)
+target_link_libraries(gbccore LINK_PRIVATE display cpu log mmu timer ppu)
 
 add_executable(gbc main.cc)
 target_link_libraries(gbc LINK_PRIVATE gbccore sdl_display)
