--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,9 +15,11 @@ add_library(timer timer.cc)
 target_include_directories(timer PUBLIC .)
 target_link_libraries(timer LINK_PRIVATE register log)
 
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIR})
 add_library(sdl_display sdl_display.cc)
 target_include_directories(sdl_display PUBLIC .)
-target_link_libraries(sdl_display LINK_PRIVATE display log)
+target_link_libraries(sdl_display ${SDL2_LIBRARY} display log)
 
 add_library(ppu ppu.cc)
 target_include_directories(ppu PUBLIC .)
@@ -26,6 +28,7 @@ target_link_libraries(ppu LINK_PRIVATE display log)
 add_library(cpu cpu.cc opcode.cc)
 target_include_directories(cpu PUBLIC .)
 target_link_libraries(cpu LINK_PRIVATE display log mmu ppu timer register)
+
 
 add_library(gbccore gbc.cc)
 target_include_directories(gbccore PUBLIC .)
