Cleanup working directory a little bit.

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,4 @@ Session.vim
 .ccls-cache/
 compile_commands.json
 cmake/*
-dump
-test.out
-pkmndump
-pkmnredcc
-Pokemon Red.gb
-tetris.gb
-tetrisdump
-tracedump
+data/*
