Update name references to bugme.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,10 +45,10 @@ add_library(cpu cpu.cc opcode.cc opcode_internal.cc)
 target_include_directories(cpu PUBLIC .)
 target_link_libraries(cpu LINK_PRIVATE display joypad log mmu ppu timer register)
 
-add_library(gbccore gbc.cc)
-target_include_directories(gbccore PUBLIC .)
-target_link_libraries(gbccore LINK_PRIVATE display cartridge cpu log mmu timer ppu)
+add_library(bugmecore gbc.cc)
+target_include_directories(bugmecore PUBLIC .)
+target_link_libraries(bugmecore LINK_PRIVATE display cartridge cpu log mmu timer ppu)
 
-add_executable(gbc main.cc)
-target_link_libraries(gbc LINK_PRIVATE gbccore sdl_display options)
-install(TARGETS gbc DESTINATION bin)
+add_executable(bugme main.cc)
+target_link_libraries(bugme LINK_PRIVATE bugmecore sdl_display options)
+install(TARGETS bugme DESTINATION bin)
